--- a/package.json
+++ b/package.json
@@ -6,20 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint && npm run lint:styles",
-    "lint:styles": "stylelint \"app/**/*.css\""
+    "lint": "npm run lint:styles",
+    "lint:styles": "stylelint \"app/**/*.css\"",
+    "generate-content": "node scripts/generate-content-index.js",
+    "predev": "npm run generate-content",
+    "prebuild": "npm run generate-content"
   },
   "dependencies": {
-    "next": "14.2.5",
+    "next": "^15.0.8",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "typescript": "5.5.4",
     "@types/node": "20.14.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "stylelint": "^16.16.0",
-    "stylelint-declaration-strict-value": "^1.10.11"
+    "stylelint-declaration-strict-value": "^1.10.11",
+    "typescript": "5.5.4"
   }
 }
